--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-favicon": "^1.0.0",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "web-vitals": "^2.1.4"
   },
