--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.0.1",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.20.2",
+    "antd-img-crop": "^4.2.3",
+    "axios": "^0.27.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-favicon": "^1.0.0",
+    "react-images-upload": "^1.2.8",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "web-vitals": "^2.1.4"
